# hackathon-2025

./: .env.example  .gitignore  .gitmodules  .radon.cfg  .vulture_whitelist.py  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml
docs/: index.md
docs/architecture/: data-flow.md  database.md  overview.md
docs/components/: context-expansion.md  ingestion.md  search.md
docs/concepts/: rag.md
docs/development/: contributing.md  setup.md  testing.md  usage.md
src/hackathon/: __init__.py  config.py
src/hackathon/cli/: __init__.py  clean.py  download_tokenizer.py  process.py  query.py
src/hackathon/database/: __init__.py  connection.py  document_ops.py  node_ops.py  operations.py  search_ops.py
src/hackathon/models/: __init__.py  database.py  schemas.py
src/hackathon/processing/: __init__.py  bm25.py  bm25_indexing.py  bm25_search.py  contextual.py  docling_processor.py  embedder.py  parser.py
src/hackathon/retrieval/: __init__.py  context_expansion.py  multifield_searcher.py  pipeline.py  query_expansion.py  reranker.py  search.py
src/hackathon/utils/: __init__.py  constants.py  logging.py
tests/: __init__.py  conftest.py  test_bm25.py  test_config.py  test_context_expansion.py  test_contextual.py  test_database.py  test_docling_processor.py  test_node_ops.py  test_parser.py  test_query_expansion.py  test_reranker.py
